node_project/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: MONGO_PASSWORD
            - name: MONGO_INITDB_ROOT_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: MONGO_USERNAME
          image: mongo:4.1.8-xenial
          imagePullPolicy: ""
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: dbdata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
status: {}
